kustomization/components/authelia/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forwardauth-authelia-middleware
spec:
  forwardAuth:
    address: http://authelia-svc.traefik.svc.cluster.local:9091/api/authz/forward-auth
    authResponseHeaders:
      - Remote-Email
      - Remote-Groups
      - Remote-Name
      - Remote-User
    trustForwardHeader: true
