kustomization/components/authelia/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authelia-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: authelia
  template:
    metadata:
      labels:
        app.kubernetes.io/name: authelia
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - authelia
              topologyKey: kubernetes.io/hostname
      automountServiceAccountToken: false
      enableServiceLinks: false
      containers:
        - name: authelia
          args:
            - --config
            - /config/config.yml
          image: ghcr.io/authelia/authelia
          livenessProbe:
            httpGet:
              path: /api/health
              port: web
              scheme: HTTP
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/health
              port: web
              scheme: HTTP
          startupProbe:
            httpGet:
              path: /api/health
              port: web
              scheme: HTTP
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 3
          ports:
            - containerPort: 9959
              name: auth-metrics
            - containerPort: 9091
              name: web
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      priorityClassName: critical-application-infra
      securityContext:
        fsGroup: 65534
        runAsGroup: 65534
        runAsUser: 65534
