kustomization/components/authelia/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: authelia-svc
spec:
  ports:
    - name: web
      port: 9091
      protocol: TCP
      targetPort: web
  selector:
    app.kubernetes.io/name: authelia
