kustomization/components/authelia/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
  name: authelia-ingress
spec:
  rules:
    - http:
        paths:
          - backend:
              service:
                name: authelia-svc
                port:
                  name: http
            path: /
            pathType: Prefix
